@@ -42,13 +42,13 @@ public class VertxExtensionMethodBoostrap {
         HashMap<CachedClass, List<MetaMethod>> map = new HashMap<>();
         
             try {
-              ScanResult result = new ClassGraph().enableAllInfo().scan();
+              ScanResult result = new ClassGraph().enableAllInfo().whitelistPackages("io.vertx.groovy.codegen.testmodel").scan();
               ClassInfoList infolist = result.getSubclasses("org.codehaus.groovy.runtime.m12n.ExtensionModule").directOnly();
               ClassInfo info = infolist.get("io.vertx.groovy.codegen.testmodel.VertxExtensionModule");
               //ClassInfo info = result.getClassInfo("io.vertx.groovy.codegen.testmodel.VertxExtensionModule");
-              ExtensionModule module = (ExtensionModule) info.loadClass().newInstance();
+              ExtensionModule module = (ExtensionModule) info.loadClass().getDeclaredConstructor().newInstance();
 
-              System.out.println("Resultado eh: " + module.getClass().getName());
+              System.out.println("Resultado eh: " + info.getName());
               if (!moduleRegistry.hasModule(module.getName())) {
                 moduleRegistry.addModule(module);
                 for (MetaMethod metaMethod : module.getMetaMethods()) {
